fix: minor card overflow fix

--- a/public/css/frontpage.css
+++ b/public/css/frontpage.css
@@ -197,7 +197,7 @@ video {
 
 .card-overflow {
     display: -webkit-box;
-    -webkit-line-clamp: 5;
+    -webkit-line-clamp: 6;
     -webkit-box-orient: vertical;
     overflow: hidden;
 }
